assets/css/base/_layout.scss
@import 'base/mixins';

$body-bg-gradient: radial-gradient(circle at 10% 10%, rgba(143, 223, 212, 0.15), transparent 40%), radial-gradient( circle at 90% 80%, rgba(143, 223, 212, 0.12), transparent 50%), $color-background;

$main-width: 100vw;
$main-width-mobile: 98vw;
$main-margin-top: 5rem;
$main-margin-top-mobile: 3.5rem;
$main-margin-sides: 12vw;
$main-margin-sides-mobile: auto;

$article-margin-vertical: clamp(1rem, 4vw, 1.875rem);

html {
    font-size: 100%;
    /* Base for rem units (usually 16px) */
    scroll-behavior: smooth;

    @include fine {
        overscroll-behavior: none;
    }
}

body {
    background: $body-bg-gradient;
    line-height: 1.4;
    font-family: $font-primary;
    color: $color-text;
    margin: 0;
    font-size: $font-size-base;
    overflow-wrap: break-word;
    background-attachment: fixed;

    &.height-overflow {
        background-attachment: scroll;
    }
}

main {
    --main-width: #{$main-width};
    --main-margin-sides: #{$main-margin-sides};
    --main-margin-top: #{$main-margin-top};
    max-width: $main-width;
    margin: var(--main-margin-top) var(--main-margin-sides) 0;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    padding: 0;

    @include mobile {
        --main-margin-sides: #{$main-margin-sides-mobile};
        --main-margin-top: #{$main-margin-top-mobile};
        --main-width: #{$main-width-mobile};
    }
}

main > article {
    background: $color-article;
    margin: $article-margin-vertical 0;
    width: 100%;
    max-width: 100%;
    box-sizing: border-box;
    padding: $spacing-md $spacing-lg;
    border-radius: $radius-xl;
    border: $border-standard;
    overflow-x: hidden;

    & > :first-child {
        @include mobile {
            margin-top: 6px;
        }
    }

    @include mobile {
        padding: $spacing-sm;
    }

    &.animated {
        animation: articleEntrance 0.6s $transition-timing;
    }
}

@keyframes articleEntrance {
    from {
        opacity: 0;
        transform: translateY(32px);
    }
    to {
        opacity: 1;
        transform: translateY(0);
    }
}

